--- a/apps/zefyrlab_web/lib/zefyrlab_web/components/layouts/root.html.heex
+++ b/apps/zefyrlab_web/lib/zefyrlab_web/components/layouts/root.html.heex
@@ -17,6 +17,7 @@
     />
 
     <link phx-track-static rel="stylesheet" href={~p"/assets/app.css"} />
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.1/dist/chart.umd.min.js"></script>
     <script defer phx-track-static type="text/javascript" src={~p"/assets/app.js"}></script>
   </head>
 
