--- a/apps/zefyrlab_web/lib/zefyrlab_web/components/layouts/app.html.heex
+++ b/apps/zefyrlab_web/lib/zefyrlab_web/components/layouts/app.html.heex
@@ -22,7 +22,7 @@
   </div>
 </header>
 
-<main class="dashboard-container">
+<main>
   <%= if msg = Phoenix.Flash.get(@flash, :info) do %>
     <div class="container">
       <div class="alert alert-info" role="alert">
